# api/core-api/app/Http/Requests/Authentication/ResetPasswordRequest.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Http\Requests\Authentication;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class ResetPasswordRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'email' => 'required|string|email|exists:users,email',
+            'token' => 'required|string',
+            'password' => 'required|string',
+        ];
+    }
+}
