# api/core-api/app/Http/Requests/Authentication/SendResetPasswordConfirmationRequest.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace App\Http\Requests\Authentication;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class SendResetPasswordConfirmationRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'email' => 'required|string|email|exists:users,email',
+        ];
+    }
+}
