# api/core-api/app/OpenApi/Schemas/Authentication/SendResetPasswordConfirmationRequest.php
@@ -1,0 +1,16 @@
+<?php
+
+namespace App\OpenApi\Schemas\Authentication;
+
+use OpenApi\Annotations as OA;
+
+/**
+ * @OA\Schema(
+ *     schema="SendResetPasswordConfirmationRequest",
+ *     type="object",
+ *     required={"email"},
+ *
+ *     @OA\Property(property="email", type="string", format="email", description="The email of the user"),
+ * )
+ */
+class SendResetPasswordConfirmationRequest {}
